/*#ifndef USART2
#define USART2

#include "IUSART.h" //for USART
#include <iostream> // for std::cout

//template
class Transmitor : public IUSART
{
public:
  void DataLineUsart() const override
  {
    //std::cout << "5.6 Mol/L" << std::endl;
  }
};

#endif*/