/*#ifndef IUSART
#define IUSART

class IUsart
{
public:
  virtual void DataLineUsart() const=0;
};

#endif*/